force-app/main/default/objects/Campaign/fields/Cloudrop__Add_Campaign_Member_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Add_Campaign_Member_Job_Id__c</fullName>
    <label>Add Campaign Member Job Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>