force-app/main/default/objects/Campaign/fields/Cloudrop__Batch_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Batch_End_Time__c</fullName>
    <label>Batch End Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>