force-app/main/default/objects/Campaign/fields/Cloudrop__Blocked__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Blocked__c</fullName>
    <label>Blocked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>