force-app/main/default/objects/Campaign/fields/Cloudrop__Bounce_Drops__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Bounce_Drops__c</fullName>
    <label>Bounce Drops</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>