force-app/main/default/objects/Campaign/fields/Cloudrop__Bounces__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Bounces__c</fullName>
    <label>Bounces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>