force-app/main/default/objects/Campaign/fields/Cloudrop__Deferred__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Deferred__c</fullName>
    <label>Deferred</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>