force-app/main/default/objects/Campaign/fields/Cloudrop__Delay_Send_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Delay_Send_Time__c</fullName>
    <label>Delay Send Time</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>