force-app/main/default/objects/Campaign/fields/Cloudrop__Delivered__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Delivered__c</fullName>
    <label>Delivered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>