force-app/main/default/objects/Campaign/fields/Cloudrop__Email_Drip_Template_3__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Email_Drip_Template_3__c</fullName>
    <label>Email Drip Template-3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>