force-app/main/default/objects/Campaign/fields/Cloudrop__From_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__From_Email__c</fullName>
    <label>From Email</label>
    <type>Email</type>
</CustomField>