force-app/main/default/objects/Campaign/fields/Cloudrop__From_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__From_Name__c</fullName>
    <label>From Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>