force-app/main/default/objects/Campaign/fields/Cloudrop__Invalid_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Invalid_Email__c</fullName>
    <label>Invalid Email</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>