force-app/main/default/objects/Campaign/fields/Cloudrop__IP_Pool_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__IP_Pool_Name__c</fullName>
    <label>IP Pool Name</label>
    <length>250</length>
    <type>Text</type>
</CustomField>