force-app/main/default/objects/Campaign/fields/Cloudrop__Open_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Open_Rate__c</fullName>
    <formula>IF(Cloudrop__Processed__c != 0,   Cloudrop__Opens__c /  Cloudrop__Processed__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>