force-app/main/default/objects/Campaign/fields/Cloudrop__Opens__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Opens__c</fullName>
    <label>Opens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>