force-app/main/default/objects/Campaign/fields/Cloudrop__Processed__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Processed__c</fullName>
    <label>Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>