force-app/main/default/objects/Campaign/fields/Cloudrop__Repeat_Bounces__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Repeat_Bounces__c</fullName>
    <label>Repeat Bounces</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>