force-app/main/default/objects/Campaign/fields/Cloudrop__Reply_To_Email__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Reply_To_Email__c</fullName>
    <label>Reply To Email</label>
    <type>Email</type>
</CustomField>