force-app/main/default/objects/Campaign/fields/Cloudrop__Requests__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Requests__c</fullName>
    <label>Requests</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>