force-app/main/default/objects/Campaign/fields/Cloudrop__Schedule_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Schedule_Date_Time__c</fullName>
    <label>Schedule Date Time</label>
    <type>DateTime</type>
</CustomField>