force-app/main/default/objects/Campaign/fields/Cloudrop__Spam_Drop__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Spam_Drop__c</fullName>
    <label>Spam Drop</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>