force-app/main/default/objects/Campaign/fields/Cloudrop__Spam_Rate__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Spam_Rate__c</fullName>
    <formula>IF( Cloudrop__Processed__c != 0 ,Cloudrop__Spam_Reports__c /  Cloudrop__Processed__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Spam Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>