force-app/main/default/objects/Campaign/fields/Cloudrop__Target_campaign_members__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Target_campaign_members__c</fullName>
    <label>Target campaign members</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>