force-app/main/default/objects/Campaign/fields/Cloudrop__Template_Api_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Template_Api_Name__c</fullName>
    <label>Template Api Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>