force-app/main/default/objects/Campaign/fields/unlimail__c.field-meta.xml
<CustomField>
    <fullName>unlimail__c</fullName>
    <defaultValue>false</defaultValue>
    <label>unlimail</label>
    <type>Checkbox</type>
</CustomField>